content/_generated-doc/2.7/config/quarkus-reactive-messaging-kafka-smallrye-reactivemessaging-kafka-reactive-messaging-kafka-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-reactive-messaging-kafka-smallrye-reactivemessaging-kafka-reactive-messaging-kafka-config_configuration]]link:#quarkus-reactive-messaging-kafka-smallrye-reactivemessaging-kafka-reactive-messaging-kafka-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-reactive-messaging-kafka-smallrye-reactivemessaging-kafka-reactive-messaging-kafka-config_quarkus.reactive-messaging.kafka.enable-graceful-shutdown-in-dev-and-test-mode]]`link:#quarkus-reactive-messaging-kafka-smallrye-reactivemessaging-kafka-reactive-messaging-kafka-config_quarkus.reactive-messaging.kafka.enable-graceful-shutdown-in-dev-and-test-mode[quarkus.reactive-messaging.kafka.enable-graceful-shutdown-in-dev-and-test-mode]`

[.description]
--
Enables the graceful shutdown in dev and test modes. The graceful shutdown waits until the inflight records have been processed and the offset committed to Kafka. While this setting is highly recommended in production, in dev and test modes, it's disabled by default. This setting allows to re-enable it.
--|boolean 
|`false`

|===