content/_generated-doc/3.2/config/quarkus-reactive-messaging-kafka-smallrye-reactivemessaging-kafka-reactive-messaging-kafka-config.adoc

:summaryTableId: quarkus-reactive-messaging-kafka-smallrye-reactivemessaging-kafka-reactive-messaging-kafka-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-reactive-messaging-kafka-smallrye-reactivemessaging-kafka-reactive-messaging-kafka-config_configuration]]link:#quarkus-reactive-messaging-kafka-smallrye-reactivemessaging-kafka-reactive-messaging-kafka-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-reactive-messaging-kafka-smallrye-reactivemessaging-kafka-reactive-messaging-kafka-config_quarkus-reactive-messaging-kafka-enable-graceful-shutdown-in-dev-and-test-mode]]`link:#quarkus-reactive-messaging-kafka-smallrye-reactivemessaging-kafka-reactive-messaging-kafka-config_quarkus-reactive-messaging-kafka-enable-graceful-shutdown-in-dev-and-test-mode[quarkus.reactive-messaging.kafka.enable-graceful-shutdown-in-dev-and-test-mode]`


[.description]
--
Enables the graceful shutdown in dev and test modes. The graceful shutdown waits until the inflight records have been processed and the offset committed to Kafka. While this setting is highly recommended in production, in dev and test modes, it's disabled by default. This setting allows to re-enable it.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REACTIVE_MESSAGING_KAFKA_ENABLE_GRACEFUL_SHUTDOWN_IN_DEV_AND_TEST_MODE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REACTIVE_MESSAGING_KAFKA_ENABLE_GRACEFUL_SHUTDOWN_IN_DEV_AND_TEST_MODE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`

|===